force-app/main/default/objects/Account/fields/Data_Confidence__c.field-meta.xml
<CustomField>
    <fullName>Data_Confidence__c</fullName>
    <defaultValue>Medium</defaultValue>
    <label>Data Confidence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
                <default>true</default>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>