force-app/main/default/objects/Account/fields/Data_Processed_EU__c.field-meta.xml
<CustomField>
    <fullName>Data_Processed_EU__c</fullName>
    <label>Data Processed in EU</label>
    <type>Checkbox</type>
</CustomField>