force-app/main/default/objects/Account/fields/Import_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Import_Batch_Number__c</fullName>
    <label>Import Batch Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>