force-app/main/default/objects/Account/fields/Next_Billing_Review__c.field-meta.xml
<CustomField>
    <fullName>Next_Billing_Review__c</fullName>
    <label>Next Billing Review</label>
    <type>Date</type>
</CustomField>