force-app/main/default/objects/Account/fields/Record_Source__c.field-meta.xml
<CustomField>
    <fullName>Record_Source__c</fullName>
    <defaultValue>Manual</defaultValue>
    <label>Record Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>