force-app/main/default/objects/Account/validationRules/Negative_Data_Quality_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Data_Quality_Score</fullName>
    <active>true</active>
    <description>Keeps the admin data-quality score inside the valid 0-100 range.</description>
    <errorConditionFormula>OR(DATA_QUALITY_SCORE__c &lt; 0, DATA_QUALITY_SCORE__c &gt; 100)</errorConditionFormula>
    <errorDisplayField>Data_Quality_Score__c</errorDisplayField>
    <errorMessage>Data Quality Score must be between 0 and 100.</errorMessage>
</ValidationRule>